add date input docs

--- a/apps/docs/app/(docs)/components/date-input/page.mdx
+++ b/apps/docs/app/(docs)/components/date-input/page.mdx
@@ -13,6 +13,54 @@ Input field with calendar that lets user enter dates.
 
 <Demo component="date-input/usage" />
 
+### Error state
+
+Enable the `error` prop to display the error state of the input field.
+
+<Demo component="date-input/error-usage" />
+
+### Disabled state
+
+Enable the `disabled` prop to toggle the disabled state of the input field.
+
+<Demo component="date-input/disabled-usage" />
+
+### Required
+
+By default we show a clear button when there is value but this can be removed by toggling the `required` prop.
+
+<Demo component="date-input/required-usage" />
+
+### Max
+
+Use the `max` prop to specify the latest date the user can enter. Will disable all dates after the specified date.
+
+<Demo component="date-input/max-usage" />
+
+### Min
+
+Use the `min` prop to specify the earliest date the user can enter. Will disable all dates prior to the specified date.
+
+<Demo component="date-input/min-usage" />
+
+### Date and time
+
+Use the `type` prop to switch between `date` and `datetime-local` inputs.
+
+<Demo component="date-input/time-usage" />
+
+### Weekend
+
+Use the `weekend` prop to provide one or more matchers to denote weekends on the calendar.
+
+<Demo component="date-input/weekend-usage" />
+
+### Holiday
+
+Use the `holiday` prop to provide one or more matchers to denote holidays on the calendar.
+
+<Demo component="date-input/holiday-usage" />
+
 ## Props
 
 ### DateInput
