move DateInput and DateRangePicker to stable

--- a/apps/docs/app/(docs)/components/date-input/page.mdx
+++ b/apps/docs/app/(docs)/components/date-input/page.mdx
@@ -82,6 +82,18 @@ Use the `holiday` prop to provide one or more matchers to denote holidays on the
 
 ## Changelog
 
+### 1.4.0
+
+- Moved component out of **Alpha**.
+
+  ```jsx
+  // Before
+  import { DateInput } from "@optiaxiom/react/unstable";
+
+  // After
+  import { DateInput } from "@optiaxiom/react";
+  ```
+
 ### 0.12.1
 
 - Added component
