--- a/apps/docs/app/(docs)/components/date-range-picker/page.mdx
+++ b/apps/docs/app/(docs)/components/date-range-picker/page.mdx
@@ -42,6 +42,18 @@ Calendar popover that lets user pick date ranges.
 
 ## Changelog
 
+### 1.4.0
+
+- Moved component out of **Alpha**.
+
+  ```jsx
+  // Before
+  import { DateRangePicker } from "@optiaxiom/react/unstable";
+
+  // After
+  import { DateRangePicker } from "@optiaxiom/react";
+  ```
+
 ### 0.13.10
 
 - Added component
