fix detecting group/separator options in ListboxItemized
by using actual last item instead of index and running variables to determine
if we need to show group label or separator

since the render can happen inside virtualized lists which might not display
all items and will not reflect previous group correctly this way

also rename group label property to be consistent

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -76,7 +76,7 @@ The following example shows how we can build **creatable** menus by allowing the
 
 We can also manually control `options` in combination with the `inputValue` and `onInputValueChange` prop to load items as the user types.
 
-And we can toggle the `loading` prop to show a loading spinner while the data is loading (an empty state will be shown otherwise).
+And we can toggle the `loading` prop to show a loading state while the data is loading (an empty state will be shown otherwise).
 
 <Demo component="menu/input-controlled-usage" meta="{55,56}" />
 
