allow configuring NavGroup to be collapsible
- fix role group for NavGroup so screen readers will announce when focusing on
  item inside the group
- make separator optional

--- a/apps/docs/app/(docs)/components/disclosure/page.mdx
+++ b/apps/docs/app/(docs)/components/disclosure/page.mdx
@@ -11,9 +11,13 @@ An interactive component which expands/collapses a panel.
 
 ### Usage
 
+<Demo component="disclosure/usage" />
+
+### Controlled
+
 Use the `open` and `defaultOpen` props to toggle between controlled and uncontrolled usage. And combine it with `onOpenChange` to listen for changes to the state.
 
-<Demo component="disclosure/usage" />
+<Demo component="disclosure/controlled-usage" />
 
 ### Indicator position
 
