--- a/apps/docs/app/(docs)/components/sidebar/page.mdx
+++ b/apps/docs/app/(docs)/components/sidebar/page.mdx
@@ -124,15 +124,21 @@ Use the `expanded` and `defaultExpanded` props on `Sidebar` to toggle between co
 
 ### Groups
 
-Use `NavGroup`, `NavGroupTrigger`, and `NavGroupContent` to group related navigation items together inside a collapsible section.
+Use `NavGroup`, `NavGroupTrigger`, and `NavGroupContent` to group related navigation items together inside a section.
 
 <Demo component="sidebar/group/usage" />
+
+### Collapsible groups
+
+Use the `collapsible` prop on `NavGroup` to make the section collapsible. Use the `defaultOpen`/`open`/`onOpenChange` props if you want to control the collapsed/expanded state.
+
+<Demo component="sidebar/group/collapsible-usage" />
 
 ### Group separators
 
 Use `NavSeparator` inside `NavGroup` to add separators between navigation items or groups.
 
-<Demo component="sidebar/group/separator-usage" />
+<Demo component="sidebar/group/separator-usage" meta="{32}" />
 
 ### Secondary navigation
 
@@ -197,6 +203,10 @@ Use `NavSeparator` inside `NavGroup` to add separators between navigation items 
 <PropsTable component="NavFooter" />
 
 ## Changelog
+
+### 1.4.5
+
+- Added `collapsible` prop to `NavGroup` and set the default to `false`.
 
 ### 0.12.1
 
