add danger intent to menu items

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -96,6 +96,12 @@ We can add the `addon` and `description` properties to show additional content i
 
 <Demo component="menu/addon-usage" meta={{ "App.tsx": "{38-43}" }} />
 
+### Appearance
+
+Use the `intent` prop to control the appearance of items.
+
+<Demo meta='/intent="danger"/' component="menu/appearance-usage" />
+
 ### Links
 
 Add the `link` property to options to render them as links.
