add basic Sortable component

--- a/apps/docs/app/(docs)/components/card/page.mdx
+++ b/apps/docs/app/(docs)/components/card/page.mdx
@@ -113,6 +113,12 @@ Include the `CardAction` component if you'd like the checkbox to be hidden until
 
 <Demo component="card/overlay-action-usage" meta="{19,21,30,33}" />
 
+### Sortable
+
+We can combine cards with the [Sortable](../sortable/) component to build a sortable list of cards.
+
+<Demo component="sortable/card-usage" />
+
 ## Props
 
 ### Card
