re-use demo for box styling
and link to styling section from box

--- a/apps/docs/app/(docs)/components/page.mdx
+++ b/apps/docs/app/(docs)/components/page.mdx
@@ -13,7 +13,11 @@ import { PropsTable } from "@/components/props-table";
 
 ### Using design tokens
 
-<Demo component="box/usage" />
+You can use props on the `<Box />` component to control styles:
+
+<Demo component="styles/prop-usage" />
+
+Visit the [Styling](/syling/) section to learn more about how to consume our design tokens.
 
 ### Composition
 
