rename inputVisible prop to make intent clearer

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -58,9 +58,9 @@ We can render multi-select items by enabling the `multi` property.
 
 ### Input
 
-By default the input is only shown if there are any selectable items (items with a `selected` property). But we can always show the input by enabling the `initialInputVisible` prop.
+By default the input is only shown if there are any selectable items (items with a `selected` property) or when the user starts typing. But we can always show the input by setting the `inputVisible` prop to `always`.
 
-<Demo component="menu/input-usage" meta="/initialInputVisible/" />
+<Demo component="menu/input-usage" meta="/inputVisible/" />
 
 #### Filtering
 
