document auto prop on tooltip

--- a/apps/docs/app/(docs)/components/tooltip/page.mdx
+++ b/apps/docs/app/(docs)/components/tooltip/page.mdx
@@ -20,17 +20,23 @@ Use the `open` and `defaultOpen` props to toggle between controlled and uncontro
 
 <Demo component="tooltip/controlled-usage" />
 
-### Delay
-
-Use the `delayDuration` prop to control how long to wait to open the tooltip after mouse hover.
-
-<Demo component="tooltip/delay-usage" />
-
 ### Placement
 
 Use the `side` and `align` props to control where the tooltip is placed by default.
 
 <Demo component="tooltip/placement-usage" />
+
+### Auto
+
+Use the `auto` prop to only show the tooltip when the underlying text is clipped.
+
+<Demo component="tooltip/auto-usage" />
+
+### Delay
+
+Use the `delayDuration` prop to control how long to wait to open the tooltip after mouse hover.
+
+<Demo component="tooltip/delay-usage" />
 
 ## Props
 
