add onValueChange prop to input
and document controlled usage of input/textarea in docs

--- a/apps/docs/app/(docs)/components/date-input/page.mdx
+++ b/apps/docs/app/(docs)/components/date-input/page.mdx
@@ -13,6 +13,12 @@ Input field with calendar that lets user enter dates.
 
 <Demo component="date-input/usage" />
 
+### Controlled
+
+Use the `value` and `defaultValue` props to toggle between controlled and uncontrolled usage. And combine it with `onValueChange` / `onChange` to listen for changes to the state.
+
+<Demo component="date-input/controlled-usage" />
+
 ### Error state
 
 Enable the `error` prop to display the error state of the input field.
