--- a/apps/docs/app/(docs)/components/input/page.mdx
+++ b/apps/docs/app/(docs)/components/input/page.mdx
@@ -15,6 +15,18 @@ Basic text field for capturing user input.
 
 <Demo component="input/usage" />
 
+### Controlled
+
+Use the `value` and `defaultValue` props to toggle between controlled and uncontrolled usage. And combine it with `onValueChange` / `onChange` to listen for changes to the state.
+
+Using `onValueChange`:
+
+<Demo component="input/controlled-usage" />
+
+Using `onChange`:
+
+<Demo component="input/controlled-onchange-usage" />
+
 ### Sizes
 
 Use the `size` prop to control the size of the input field.
