--- a/apps/docs/app/(docs)/components/textarea/page.mdx
+++ b/apps/docs/app/(docs)/components/textarea/page.mdx
@@ -15,6 +15,18 @@ Multi-line text field for capturing user input.
 
 <Demo component="textarea/usage" />
 
+### Controlled
+
+Use the `value` and `defaultValue` props to toggle between controlled and uncontrolled usage. And combine it with `onValueChange` / `onChange` to listen for changes to the state.
+
+Using `onValueChange`:
+
+<Demo component="textarea/controlled-usage" />
+
+Using `onChange`:
+
+<Demo component="textarea/controlled-onchange-usage" />
+
 ### Error state
 
 Enable the `error` prop to display the error state of the text field.
