highlight Menu component from DropdownMenu docs

--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -1,13 +1,16 @@
-import { Cards } from "@/components/cards";
-import { Demo } from "@/components/demo";
-import { Links } from "@/components/links";
-import { PropsTable } from "@/components/props-table";
+import { Cards, Demo, Links, PropsTable } from "@/components";
+import { Alert } from "@optiaxiom/react";
 
 # DropdownMenu
 
 Display a dropdown menu.
 
 <Links component="dropdown-menu" />
+
+<Alert intent="information" mt="16">
+  Try out our new fully featured [Menu](../menu/) component that has a simpler
+  API, allows filtering/selecting items, and includes built-in virtualization.
+</Alert>
 
 ## Documentation
 
