--- a/apps/docs/app/(docs)/components/axiom-provider/page.mdx
+++ b/apps/docs/app/(docs)/components/axiom-provider/page.mdx
@@ -1,6 +1,4 @@
-import { Cards } from "@/components/cards";
-import { Links } from "@/components/links";
-import { PropsTable } from "@/components/props-table";
+import { Cards, Links, PropsTable } from "@/components";
 
 # AxiomProvider
 
