--- a/apps/docs/app/(docs)/components/modal-layer/page.mdx
+++ b/apps/docs/app/(docs)/components/modal-layer/page.mdx
@@ -1,5 +1,4 @@
-import { Demo } from "@/components/demo";
-import { PropsTable } from "@/components/props-table";
+import { Demo, PropsTable } from "@/components";
 
 # ModalLayer
 
