--- a/apps/docs/app/(docs)/components/pill/page.mdx
+++ b/apps/docs/app/(docs)/components/pill/page.mdx
@@ -1,7 +1,4 @@
-import { Cards } from "@/components/cards";
-import { Demo } from "@/components/demo";
-import { Links } from "@/components/links";
-import { PropsTable } from "@/components/props-table";
+import { Cards, Demo, Links, PropsTable } from "@/components";
 
 # Pill
 
