--- a/apps/docs/app/(docs)/styling/colors/page.mdx
+++ b/apps/docs/app/(docs)/styling/colors/page.mdx
@@ -1,6 +1,5 @@
 import { theme } from "@optiaxiom/react";
-import { Demo } from "@/components/demo";
-import { Scale } from "@/components/scale";
+import { Demo, Scale } from "@/components";
 
 # Colors
 
