--- a/apps/docs/app/(docs)/styling/flex-wrap/page.mdx
+++ b/apps/docs/app/(docs)/styling/flex-wrap/page.mdx
@@ -1,5 +1,4 @@
-import { Scale } from "@/components/scale";
-import { Demo } from "@/components/demo";
+import { Demo, Scale } from "@/components";
 
 # Flex Wrap
 
