--- a/apps/docs/app/(docs)/styling/page.mdx
+++ b/apps/docs/app/(docs)/styling/page.mdx
@@ -1,4 +1,4 @@
-import { Demo } from "@/components/demo";
+import { Demo } from "@/components";
 import { Alert } from "@optiaxiom/react";
 
 # Style Props
