--- a/apps/docs/app/(docs)/styling/responsive-styles/page.mdx
+++ b/apps/docs/app/(docs)/styling/responsive-styles/page.mdx
@@ -1,6 +1,5 @@
 import { tokens } from "@optiaxiom/react";
-import { Scale } from "@/components/scale";
-import { Demo } from "@/components/demo";
+import { Demo, Scale } from "@/components";
 
 # Responsive Styles
 
