--- a/apps/docs/app/(docs)/guides/page.mdx
+++ b/apps/docs/app/(docs)/guides/page.mdx
@@ -1,4 +1,4 @@
-import { Cards } from "@/components/cards";
+import { Cards } from "@/components";
 import { Steps } from "nextra/components";
 
 # Getting Started
