--- a/apps/docs/app/(docs)/styling/border-color/page.mdx
+++ b/apps/docs/app/(docs)/styling/border-color/page.mdx
@@ -1,5 +1,4 @@
-import { Demo } from "@/components/demo";
-import { Scale } from "@/components/scale";
+import { Demo, Scale } from "@/components";
 
 # Border Color
 
