--- a/apps/docs/app/(docs)/styling/border-radius/page.mdx
+++ b/apps/docs/app/(docs)/styling/border-radius/page.mdx
@@ -1,6 +1,4 @@
-import { Scale } from "@/components/scale";
-
-import { Demo } from "@/components/demo";
+import { Demo, Scale } from "@/components";
 
 # Border Radius
 
