rename menu link prop to href
to be consistent with native prop name in HTML and make it more intuitive

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -104,7 +104,7 @@ Use the `intent` prop to control the appearance of items.
 
 ### Links
 
-Add the `link` property to options to render them as links.
+Add the `href` property to options to render them as links.
 
 <Demo component="menu/link-usage" meta="{14}" />
 
