improve Kbd styling
- change keys prop to modifiers and only allow actual modifier keys
- support both mac and non-mac platforms for modifier codes
- show separate keys for modifiers to better demonstrate them visually

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -106,7 +106,7 @@ Use the `intent` prop to control the appearance of items.
 
 Add the `href` property to options to render them as links.
 
-If the `execute` property is also present then the default link clicking behavior will be prevented (unless users use a modifier like <Kbd keys="command">Enter</Kbd> to open in a new tab).
+If the `execute` property is also present then the default link clicking behavior will be prevented (unless users use a modifier like <Kbd modifiers="meta">Enter</Kbd> to open in a new tab).
 
 <Demo component="menu/link-execute-usage" meta="{13,28}" />
 
