--- a/apps/docs/app/(docs)/components/date-range-picker/page.mdx
+++ b/apps/docs/app/(docs)/components/date-range-picker/page.mdx
@@ -66,7 +66,7 @@ Use the `addonBefore` and `addonAfter` prop on `DateRangePickerContent` to add c
 | <Kbd>Enter</Kbd>                                                                                                                                                                         | When focus is on `DateRangePickerTrigger`, opens the calendar and focuses the selected day (or today's date). When focus is on a day, selects the focused day. |
 | <Flex gap="8"><Flex flexDirection="row" gap="8"><Kbd>ArrowUp</Kbd> <Kbd>ArrowDown</Kbd></Flex><Flex flexDirection="row" gap="8"><Kbd>ArrowRight</Kbd> <Kbd>ArrowLeft</Kbd></Flex></Flex> | Navigate between days in the calendar.                                                                                                                         |
 | <Flex flexDirection="row" gap="8"><Kbd>PageUp</Kbd> <Kbd>PageDown</Kbd></Flex>                                                                                                           | Navigate between months in the calendar.                                                                                                                       |
-| <Flex flexDirection="row" gap="8"><Kbd keys="shift">PageUp</Kbd> <Kbd keys="shift">PageDown</Kbd></Flex>                                                                                 | Navigate between years in the calendar.                                                                                                                        |
+| <Flex flexDirection="row" gap="8"><Kbd modifiers="shift">PageUp</Kbd> <Kbd modifiers="shift">PageDown</Kbd></Flex>                                                                       | Navigate between years in the calendar.                                                                                                                        |
 | <Kbd>Esc</Kbd>                                                                                                                                                                           | Closes the calendar popover and moves focus back to `DateRangePickerTrigger`.                                                                                  |
 
 ## Changelog
