rename truncate section to collapsed

--- a/apps/docs/app/(docs)/components/breadcrumb/page.mdx
+++ b/apps/docs/app/(docs)/components/breadcrumb/page.mdx
@@ -25,13 +25,13 @@ We can use the `addonAfter` property to show additional content inside the items
 
 <Demo component="breadcrumb/addon-usage" />
 
-### Truncate
+### Collapsed items
 
 `Breadcrumb` will by default only show 3 items and collapse the rest into a dropdown menu.
 
 This can be configured using the `maxItems` prop.
 
-<Demo component="breadcrumb/truncate-usage" />
+<Demo component="breadcrumb/collapse-usage" />
 
 ## Props
 
