--- a/apps/docs/app/(docs)/components/sortable/page.mdx
+++ b/apps/docs/app/(docs)/components/sortable/page.mdx
@@ -35,7 +35,7 @@ export default () => (
 
 `Sortable` works with a list of items provided via the `items` prop. Each item must be a unique string identifying the sortable item within the list.
 
-Next we provide a render prop in `children` that takes in two arguments - the **item** and the **index** - to render the contents of each item.
+Next we provide a render prop in `children` that takes in an object with the properties **id** and **index** - to render the contents of each item.
 
 Finally we use `SortableItem` to render each sortable element inside the render function.
 
@@ -66,6 +66,14 @@ By default the whole item acts as the drag handle, but we can use the `SortableH
 
 <Demo component="sortable/handle-usage" />
 
+### Multiple lists
+
+Use the `SortableList` component to swap items between lists in addition to sorting with each other.
+
+We also need to change the `items` prop to an object where the key is the ID of the list and the value is the list of items within that list.
+
+<Demo component="sortable/list-usage" />
+
 ### Card example
 
 We can combine Sortable with the [Card](../card/) component to build a sortable list of cards.
@@ -77,6 +85,10 @@ We can combine Sortable with the [Card](../card/) component to build a sortable 
 ### Sortable
 
 <PropsTable component="Sortable" />
+
+### SortableList
+
+<PropsTable component="SortableList" />
 
 ### SortableItem
 
