--- a/apps/docs/app/(docs)/components/sortable/page.mdx
+++ b/apps/docs/app/(docs)/components/sortable/page.mdx
@@ -20,6 +20,7 @@ import {
   Sortable,
   SortableHandle,
   SortableItem,
+  SortableList,
 } from "@optiaxiom/react/unstable";
 
 export default () => (
@@ -27,6 +28,10 @@ export default () => (
     <SortableItem>
       <SortableHandle />
     </SortableItem>
+
+    <SortableList>
+      <SortableItem />
+    </SortableList>
   </Sortable>
 );
 ```
