--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -16,7 +16,7 @@ Multi-purpose combobox widget to allow selection from a dynamic set of options.
 ### Anatomy
 
 ```tsx
-import { Menu, MenuContent, MenuTrigger } from "@optiaxiom/react";
+import { Menu, MenuContent, MenuTrigger } from "@optiaxiom/react/unstable";
 
 export default () => (
   <Menu>
